--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,11 +2,16 @@
 layout: default
 ---
 
-<article class="page">
+<article class="post">
 
-  <h1>{{ page.title }}</h1>
-
-  <div class="entry">
-    {{ content }}
+  <div class="post-meta">
+    <h1 class="post-title">{{ page.title }}</h1>
   </div>
+
+  <section>
+    {{content}}
+  </section>
+
 </article>
+
+{% include footer.html %}
