--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,16 +2,11 @@
 layout: default
 ---
 
-<article class="post">
+<article class="page">
 
-  <div class="post-meta">
-    <h1 class="post-title">{{ page.title }}</h1>
+  <h1>{{ page.title }}</h1>
+
+  <div class="entry">
+    {{ content }}
   </div>
-
-  <section>
-    {{content}}
-  </section>
-
 </article>
-
-{% include footer.html %}
