--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,19 +2,16 @@
 layout: default
 ---
 
-<article>
+<article class="post">
+  <h1>{{ page.title }}</h1>
 
-  <h2 itemprop="name"><a href="{{ site.baseurl }}{{ post.url }}" itemprop="url">{{ page.title }}</a></h2>
-
-  <div class="post-meta">
-    <time datetime="{{ page.date | date_to_long_string }}">{{ page.date | date_to_long_string }}</time>
+  <div class="entry">
+    {{ content }}
   </div>
 
-  <section>
-    {{content}}
-  </section>
-
-    {% include footer.html %}
-
+  <div class="date">
+    Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
+
+  {% include disqus.html %}
 </article>
