--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,10 @@
 html {
-  margin: 0px;
-  padding: 0px;
+	margin: 0px;
+	padding: 0px;
+}
 
-  font: normal 100%/1.4 Georgia, serif;
+body {
+	width: 800px;
+	margin: auto;
+	background: white
 }
