--- a/layout.css
+++ b/layout.css
@@ -17,13 +17,13 @@ header, div#content, footer {
   div#essays{ max-width: inherit; float: inherit; }
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
+/* Small devices (portrait tablets and large phones, 600px to 960px) */
 @media only screen and (min-width: 600px) and (max-width: 960px){
   div#articles{ width: auto; margin-right: 300px; float: left; }
   div#essays{ width: 300px; margin-left: -300px; float: right; }
 }
 
-/* Medium devices (landscape tablets, 768px and up) */
+/* Medium devices (landscape tablets, 960px and up) */
 @media only screen and (min-width: 960px) {
   html { max-width: 960px; margin: 0px auto; }
     div#articles{ width: 660px; float: inherit; }
