Moved css location

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
   <meta name="description" content="A page's description,
   usually one or two sentences."/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="layout.css" >
-  <link rel="stylesheet" href="colors.css" >
+  <link rel="stylesheet" href="css/layout.css" >
+  <link rel="stylesheet" href="css/colors.css" >
 </head>
 
 
