Added icon links to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,12 @@
 <header>
   joesdesk
-  <a href="">Linkedin</a>
-  <a href="">Github</a>
-  <a href="about.html">About</a>
+  <a href="https://github.com/joesdesk">
+    <img src="icons/github.png" height="40px" width="40px">
+  </a>
+  <a href="https://www.linkedin.com/in/jomar-sastrillo/">
+    <img src="icons/linkedin.png" height="40px" width="40px">
+  </a>
+  <a href="about.html">
+    <img src="icons/profile.png" height="40px" width="40px">
+  </a>
 </header>
