--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,14 @@
 <header>
-  joesdesk
+  <div>
+    joesdesk
+  </div>
   <a href="https://github.com/joesdesk">
-    <img src="icons/github.png" height="40px" width="40px">
+    <img src="icons/github.png" height="25px" width="25px">
   </a>
   <a href="https://www.linkedin.com/in/jomar-sastrillo/">
-    <img src="icons/linkedin.png" height="40px" width="40px">
+    <img src="icons/linkedin.png" height="25px" width="25px">
   </a>
   <a href="about.html">
-    <img src="icons/profile.png" height="40px" width="40px">
+    <img src="icons/profile.png" height="25px" width="25px">
   </a>
 </header>
