--- a/css/layout.css
+++ b/css/layout.css
@@ -29,3 +29,15 @@ header, div#content, footer {
     div#articles{ width: 660px; float: inherit; }
     div#essays{ max-width: 300px; float: inherit; }
 }
+
+/* Header layout */
+header div {
+  margin-top: 15px;
+  margin-bottom: -50px;
+  text-align: center;
+}
+
+header a {
+  float: right;
+  padding: 10px;
+}
