--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,12 +2,17 @@
 <html>
 
 <head>
+
   <title>Joe's Desk</title>
-  <meta name="description" content="A page's description,
-  usually one or two sentences."/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta name="author" content="Jomar Sastrillo">
+  <meta name="description" content="Website for Jomar's profile."/>
+  <meta name="keywords" content="Jomar Sastrillo, Portfolio, Data Science, Physics, Math">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+
   <link rel="stylesheet" href="css/layout.css" >
   <link rel="stylesheet" href="css/colors.css" >
+
 </head>
 
 
