Added header css

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,14 @@
 <header>
-  <div>
-    joesdesk
-  </div>
-  <a href="https://github.com/joesdesk">
+  <a class="home" href="index.html">
+    <span id="logo">joesdesk</span>
+  </a>
+  <a class="badge" href="https://github.com/joesdesk">
     <img src="icons/github.png" height="25px" width="25px">
   </a>
-  <a href="https://www.linkedin.com/in/jomar-sastrillo/">
+  <a class="badge" href="https://www.linkedin.com/in/jomar-sastrillo/">
     <img src="icons/linkedin.png" height="25px" width="25px">
   </a>
-  <a href="about.html">
+  <a class="badge" href="about.html">
     <img src="icons/profile.png" height="25px" width="25px">
   </a>
 </header>
