Make link to home capitalized

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
   <a class="home" href="index.html">
-    <span id="logo">joesdesk</span>
+    <span id="logo">JOESDESK</span>
   </a>
   <a class="badge" href="https://github.com/joesdesk">
     <img src="icons/github.png" height="25px" width="25px">
