--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
   <meta name="keywords" content="Jomar Sastrillo, Portfolio, Data Science, Physics, Math">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-  <link rel="stylesheet" href="css/layout.css" >
-  <link rel="stylesheet" href="css/colors.css" >
+  <link rel="stylesheet" href="css/default.css" >
+  <link rel="stylesheet" href="css/homepage.css">
 
 </head>
 
