Positioned footer logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
   <a class="home" href="index.html">
-    <span id="logo">joesdesk</span>
+    <span id="logo">JOESDESK</span>
   </a>
 </footer>
