--- a/css/homepage.css
+++ b/css/homepage.css
@@ -83,7 +83,7 @@ article.essay .subtitle {
 }
 
 
-/* Fonts */
+/* Fonts and colours */
 .title{
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
@@ -93,8 +93,13 @@ article.essay .subtitle {
   font-family: Georgia, Times, serif;
 }
 
+.tag {
+  font: bold 14px/16px Helvetica, Arial, sans-serif;
+  color: #BB0000;
+}
+
 .date {
   margin: 2px none;
-  font-size: 13px;
+  font-size: 12px;
   font-family: Helvetica, Arial, sans-serif;
 }
