--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
 <footer>
-  <a class="home" href="index.html">
-    <span id="logo">JOESDESK</span>
-  </a>
+
+  <div class="copyright">
+    <span>&copy; 2018 joesdesk</span>
+  </div>
+
 </footer>
