--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,21 @@
 <header>
-  <a class="home" href="index.html">
-    <span id="logo">JOESDESK</span>
-  </a>
-  <a class="badge" href="https://github.com/joesdesk">
-    <img src="icons/github.png" height="25px" width="25px">
-  </a>
-  <a class="badge" href="https://www.linkedin.com/in/jomar-sastrillo/">
-    <img src="icons/linkedin.png" height="25px" width="25px">
-  </a>
-  <a class="badge" href="about.html">
-    <img src="icons/profile.png" height="25px" width="25px">
-  </a>
+
+  <div class="home">
+    <a href="index.html">
+      <span class="logo"><span>JOES</span>DESK</span>
+    </a>
+  </div>
+
+  <div class="badges">
+    <a href="https://github.com/joesdesk">
+      <img src="icons/github.png" height="25px" width="25px">
+    </a>
+    <a href="https://www.linkedin.com/in/jomar-sastrillo/">
+      <img src="icons/linkedin.png" height="25px" width="25px">
+    </a>
+    <a href="about.html">
+      <img src="icons/profile.png" height="25px" width="25px">
+    </a>
+  </div>
+
 </header>
