--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,8 +1,6 @@
 /* Core style of module containers */
-#content {
-  display: flex;
-  width: 100%;
-}
+/*#content { /*display: flex; width: 100%; }*/
+#content { display: block; width: 100%; }
 
 .column {
   float: left;
@@ -15,6 +13,8 @@
 
 /* Small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+
+  /*#content { flex-direction: column; }*/
 
   .contain_columns {
     flex-direction: column;
@@ -29,19 +29,13 @@
 /* Medium devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px){
 
-  #content {
-    flex-direction: row;
+  /*#content { flex-direction: row; }*/
+
+  #articles{}
+
+  #essays{
+    flex: 0 0 300px;
   }
-
-    div#articles{
-      flex-grow: 1;
-      width: auto;
-    }
-
-    div#essays{
-      flex-grow: 0;
-      width: 300px;
-    }
 
 }
 
