Fix img tag endings

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,13 +8,13 @@
 
   <div class="badges">
     <a href="https://github.com/joesdesk">
-      <img src="icons/github.png" height="25px" width="25px">
+      <img src="icons/github.png" height="25px" width="25px"/>
     </a>
     <a href="https://www.linkedin.com/in/jomar-sastrillo/">
-      <img src="icons/linkedin.png" height="25px" width="25px">
+      <img src="icons/linkedin.png" height="25px" width="25px"/>
     </a>
     <a href="about.html">
-      <img src="icons/profile.png" height="25px" width="25px">
+      <img src="icons/profile.png" height="25px" width="25px"/>
     </a>
   </div>
 
