--- a/css/default.css
+++ b/css/default.css
@@ -19,9 +19,41 @@ html, body {
   width: 100%;
 }
 
+
+/* Small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+  /*#content { flex-direction: column; }*/
+
+  .contain_columns {
+    flex-direction: column;
+  }
+
+  .contain_rows {
+    flex-direction: row;
+  }
+
+}
+
+
+/* Medium devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px){
+
+  /*#content { flex-direction: row; }*/
+
+  #articles{}
+
+  #essays{
+    flex: 0 0 300px;
+  }
+
+}
+
+
 /* Larger devices (landscape tablets, 960px and up) */
 @media only screen and (min-width: 960px) {
 
+  /* Limit html width if screen is wider */
   html {
     width: 960px;
     margin: 0px auto;
@@ -31,42 +63,24 @@ html, body {
 
 /* Header and footer defaults */
 header, footer {
-  display: block;
+  display: flex;
   overflow: hidden;
   background-color: #000080;
-}
-
-header {
-  padding-top: 20px;
-  padding-bottom: 8px;
-  margin-bottom: 20px;
-}
-
-footer {
-  padding-top: 8px;
-  padding-bottom: 20px;
-  margin-top: 20px;
 }
 
 /* Header components layout */
 header div, footer div {
   display: block;
   float: left;
-  margin-top: 5px;
 }
 
 header div.home {
-  width: 300px;
-  text-align: center;
+  flex: 1;
+  padding: 10px 0px 10px 10px;
 }
 
 header div.badges {
-  width: 150px;
-  float: right;
-}
-
-header div.badges a {
-  margin-right: 20px;
+  flex: 0 0 auto;
 }
 
 /* Footer components layout */
@@ -90,9 +104,21 @@ span.logo {
 span.logo {
   color: white;
   text-decoration: none;
-  font: 400 30px/32px "Assistant", Arial, Helvetica, sans-serif;
+  font: 400 22px/24px "Assistant", Arial, Helvetica, sans-serif;
 }
 
 span.logo span {
   font-weight: 700;
+}
+
+/* Badges */
+div.badges a {
+  display: block;
+  float: left;
+  line-height: 0px;
+}
+
+div.badges img {
+  padding: 10px;
+  border-left: 1px solid white;
 }
